add a lot of bugs

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -36,6 +36,7 @@
                     PC端点击地址栏右侧的“+”图标可将本应用添加到桌面上，
                     移动端可通过浏览器菜单将本应用添加至桌面上。
                 </p>
+                {{  libraries | json}}
             </div>
         </div>
     </mat-tab>
